Inform ink-drop of ToolbarButton bounds changes

Fixes bug (and DCHECK) when the leading ToolbarButton (back) switches
between maximized and and unmaximized windows. Maximizing the window
adds leading margin to the view which changes its bounds and size.

ToolbarButton overrides OnBoundsChanged but did not call the parent
OnBoundsChanged. Therefore InkDropHostView did not resize the inkdrop
and mask. This caused clipping in release and DCHECKs in debug due to
layer/mask size mismatches.

Bug: chromium:856515, chromium:857411
Change-Id: I6348b2cdef11a95e5800d337d60f5060b93c4d99
Reviewed-on: https://chromium-review.googlesource.com/1118972
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571236}
Former-commit-id: 49ac4812986f8d49ba458461610dd59ebe80b493